--- a/cfg/MrotorController.cfg
+++ b/cfg/MrotorController.cfg
@@ -13,15 +13,21 @@ gen.add("finite_diff_enabled", bool_t, 0, "Switch of finite difference", True)
 # >>> Thresholds
 gen.add("max_acc",    double_t,    0, "Max Feedback Acceleration", 8.0,  1.0, 30.0)
 # >>> System Constants
-gen.add("normalized_thrust_constant", double_t, 0, "Proportional gain for Y velocity error", 0.05, 0.01, 0.5)
-gen.add("normalized_thrust_offset", double_t, 0, "Proportional gain for Z velocity error", -1.0, 0.0, 1.0)
+gen.add("normalized_thrust_constant",   double_t, 0, "Normalized thrust constant", 0.05, 0.01, 0.5)
+gen.add("normalized_thrust_offset",     double_t, 0, "Normalized thrust offset", -1.0, 0.0, 1.0)
 # >>> Gains
-gen.add("Kp_x", double_t,   0,  "Proportional gain for X position error", 10.0,  0.1, 100.0)
-gen.add("Kp_y", double_t,   0,  "Proportional gain for Y position error", 10.0, 0.1, 100.0)
-gen.add("Kp_z", double_t,   0,  "Proportional gain for Z position error", 20.0, 0.1, 100.0)
-gen.add("Kv_x", double_t,   0,  "Proportional gain for X velocity error", 5.0,  0.1, 100.0)
-gen.add("Kv_y", double_t,   0,  "Proportional gain for Y velocity error", 5.0, 0.1, 100.0)
-gen.add("Kv_z", double_t,   0,  "Proportional gain for Z velocity error", 10.0, 0.1, 100.0)
+gen.add("Kp_x", double_t,   0,  "Gain for X position error", 10.0,  0.1, 100.0)
+gen.add("Kp_y", double_t,   0,  "Gain for Y position error", 10.0, 0.1, 100.0)
+gen.add("Kp_z", double_t,   0,  "Gain for Z position error", 20.0, 0.1, 100.0)
+gen.add("Kv_x", double_t,   0,  "Gain for X velocity error", 5.0,  0.1, 100.0)
+gen.add("Kv_y", double_t,   0,  "Gain for Y velocity error", 5.0, 0.1, 100.0)
+gen.add("Kv_z", double_t,   0,  "Gain for Z velocity error", 10.0, 0.1, 100.0)
+gen.add("Ka_x", double_t,   0,  "Gain for X acceleration error", 0.0,  0.1, 100.0)
+gen.add("Ka_y", double_t,   0,  "Gain for Y acceleration error", 0.0, 0.1, 100.0)
+gen.add("Ka_z", double_t,   0,  "Gain for Z acceleration error", 0.0, 0.1, 100.0)
+gen.add("Kj_x", double_t,   0,  "Gain for X jerk error", 0.0,  0.1, 100.0)
+gen.add("Kj_y", double_t,   0,  "Gain for Y jerk error", 0.0, 0.1, 100.0)
+gen.add("Kj_z", double_t,   0,  "Gain for Z jerk error", 0.0, 0.1, 100.0)
 # >>> Reference Trajectory
 gen.add("c_x", double_t,    0, "Center of x coordinate trajectory", 0.0, -1.0, 1.0)
 gen.add("c_y", double_t,    0, "Center of y coordinate trajectory", 0.0, -1.0, 1.0)
